--- a/environment.yml
+++ b/environment.yml
@@ -7,7 +7,11 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
+  - _tflow_select=2.3.0=mkl
+  - absl-py=0.8.0=py36_0
+  - astor=0.7.1=py_0
   - blas=1.0=mkl
+  - c-ares=1.15.0=h516909a_1001
   - ca-certificates=2019.6.16=hecc5488_0
   - certifi=2019.6.16=py36_1
   - cffi=1.12.3=py36h2e261b9_0
@@ -22,7 +26,10 @@ dependencies:
   - expat=2.2.6=he6710b0_0
   - fontconfig=2.13.0=h9420a91_0
   - freetype=2.9.1=h8a8886c_1
+  - gast=0.2.2=py_0
   - glib=2.56.2=hd408876_0
+  - google-pasta=0.1.7=py_0
+  - grpcio=1.22.0=py36he9ae1f9_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
   - h5py=2.9.0=py36h7918eee_0
@@ -32,17 +39,21 @@ dependencies:
   - intel-openmp=2019.4=243
   - joblib=0.13.2=py36_0
   - jpeg=9b=h024ee3a_2
+  - keras-applications=1.0.8=py_1
+  - keras-preprocessing=1.1.0=py_0
   - kiwisolver=1.1.0=py36he6710b0_0
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libpng=1.6.37=hbc83047_0
+  - libprotobuf=3.9.1=h8b12597_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
   - libtiff=4.0.10=h2733197_2
   - libuuid=1.0.3=h1bed415_2
   - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=hea5a465_1
+  - markdown=3.1.1=py_0
   - matplotlib=3.1.1=py36h5429711_0
   - mkl=2019.4=243
   - mkl-service=2.0.2=py36h7b6447c_0
@@ -79,13 +90,20 @@ dependencies:
   - sip=4.19.13=py36he6710b0_0
   - six=1.12.0=py36_0
   - sqlite=3.29.0=h7b6447c_0
+  - tensorboard=1.14.0=py36_0
+  - tensorflow=1.14.0=mkl_py36h2526735_0
+  - tensorflow-base=1.14.0=mkl_py36h7ce6ba3_0
+  - tensorflow-estimator=1.14.0=py36h5ca1d4c_0
+  - termcolor=1.1.0=py_2
   - tk=8.6.8=hbc83047_0
   - toolz=0.10.0=py_0
   - torchvision=0.2.0=py36h17b6947_1
   - tornado=6.0.3=py36h7b6447c_0
   - tqdm=4.35.0=py_0
   - ujson=1.35=py36h14c3975_0
+  - werkzeug=0.15.5=py_0
   - wheel=0.33.4=py36_0
+  - wrapt=1.11.2=py36h516909a_0
   - xz=5.2.4=h14c3975_4
   - yaml=0.1.7=h96e3832_1
   - zlib=1.2.11=h7b6447c_3
@@ -93,4 +111,3 @@ dependencies:
   - pip:
     - protobuf==3.9.1
     - tensorboard-logger==0.1.0
-prefix: /home/tgupta6/miniconda3/envs/vico_env
